[gd_scene load_steps=7 format=2]

[ext_resource path="res://Art n Music/Towers/toothpickjar.png" type="Texture" id=1]
[ext_resource path="res://Scripts/AOETower.gd" type="Script" id=2]
[ext_resource path="res://Art n Music/Character Sprites/shadow_character.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.99998
height = 12.0

[sub_resource type="CircleShape2D" id=2]
radius = 120.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 17, 22 )

[node name="AOETower" type="Node2D"]
script = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
rotation = 1.5708
shape = SubResource( 1 )

[node name="SightArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SightArea"]
self_modulate = Color( 0.219608, 1, 0, 0.376471 )
shape = SubResource( 2 )

[node name="ExcludeSpawn" type="Area2D" parent="." groups=["Spawnable"]]
__meta__ = {
"_editor_description_": "This is for making sure things don't spawn on/near the player"
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExcludeSpawn"]
self_modulate = Color( 0, 0.0627451, 1, 0.152941 )
show_behind_parent = true
rotation = 1.5708
shape = SubResource( 3 )

[node name="ShotPosition" type="Position2D" parent="."]
position = Vector2( 0, -20 )
__meta__ = {
"_gizmo_extents_": 4.0
}

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="ShadowCharacter" type="Sprite" parent="."]
position = Vector2( 0.5, -1 )
scale = Vector2( 1.25, 1.25 )
texture = ExtResource( 3 )

[node name="Toothpickjar" type="Sprite" parent="."]
position = Vector2( 0, -11 )
texture = ExtResource( 1 )
